styles.css
/* google fonts */
@import url("https://fonts.googleapis.com/css2?family=Encode+Sans+Semi+Expanded:wght@600&family=Open+Sans&display=swap");
/* font-family: 'Encode Sans Semi Expanded', sans-serif;
font-family: 'Open Sans', sans-serif; */

/* universal selectors */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/* header */
.header {
  padding: 1rem;
  padding-top: 1.5rem;
  display: grid;
  grid-template-columns: 2fr 1fr;
  width: 100vw;
}
.logo h2 {
  font-family: "Encode Sans Semi Expanded", sans-serif;
  color: rgb(71, 67, 67);
  font-size: 2rem;
}
.logo span {
  color: rgb(85, 179, 98);
}
.login-btn {
  color: white;
  background: rgb(85, 179, 98);
  border: none;
  text-transform: uppercase;
  padding: 8px;
  font-size: 1rem;
  border-radius: 4px;
}
.login-btn:hover {
  cursor: pointer;
  background: rgb(67, 145, 77);
}
.login {
  justify-self: end;
  display: flex;
  align-items: center;
}
.logo {
  display: flex;
  align-items: center;
}
.sentence {
  display: none;
}
@media screen and (min-width: 992px) {
  .sentence {
    display: grid;
    align-items: center;
  }
  .sentence h5 {
    justify-self: end;
    letter-spacing: 4px;
    font-weight: lighter;
    color: rgb(68, 70, 60);
  }
  .header {
    grid-template-columns: 3fr 4fr 1fr;
  }
  .logo h2 {
    font-size: 2.5rem;
  }
}

/* end of header  */

/* 
=================================

Navbar

================================= 
*/
.navbar {
  background: rgb(85, 179, 98);
  /* padding-top: 1rem;
    padding-bottom: 1rem; */
  width: 100vw;
  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
}
.nav-list li {
  display: none;
}
.dark-btn-container {
  display: none;
}
.navbar {
  display: grid;
  grid-template-columns: 1fr 4fr 1fr 1fr;
}
.nav-btn {
  border: none;
  background: transparent;
  color: white;
  font-size: 1.2rem;
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.nav-btn-container {
  height: 100%;
  display: grid;
}
.nav-btn-container :hover {
  background: white;
}
.nav-btn-container:hover .nav-btn {
  color: black;
}
.dark-btn-container {
  display: none;
}
@media screen and (min-width: 600px) {
  .dark-btn-container {
    display: grid;
  }
  .navbar {
    grid-template-columns: 1fr 4fr 1fr 1fr 1fr;
  }
}
@media screen and (min-width: 800px) {
  .navbar-btn-container {
    display: none;
  }
  .navbar {
    grid-template-columns: 17fr 1fr 1fr 1fr;
  }

  /* .nav-list li{
    display: grid;
  } */
  .nav-list li {
    /* display: block; */
    color: white;
    letter-spacing: 3px;
    text-transform: uppercase;
    font-size: 1rem;
    font-weight: bolder;
    display: grid;
    grid-template-columns: 1fr auto;
    align-items: center;
    column-gap: 4px;
    height: 100%;
    width: 100%;
    justify-self: center;
    justify-items: center;
    padding: 2px;
  }
  .nav-list :hover {
    background: rgba(253, 255, 255, 0.986);
    color: black;
  }
  .nav-list {
    display: grid;
    grid-template-columns: repeat(6, 1fr);
    place-items: center;
    grid: 0;
    margin: 0;
  }
}
/* 
======================

Body 

======================
 */

.container {
  width: 100vw;
  display: grid;
  grid-template-columns: 3fr 13fr;
}

/* sidebar  */

.sidebar {
  display: none;

  box-shadow: 2px 2px 2px #9b9898a2;
}
@media screen and (min-width: 772px) {
  .sidebar {
    display: grid;
  }
}
.sidebar h4 {
  margin-top: 10px;
  margin-bottom: 10px;
  padding-left: 15px;
  font-size: 1.4rem;
  font-weight: lighter;
}
.sidebar-li {
  display: grid;
}
.sidebar-list li {
  font-size: 1.1rem;
  padding: 1px;
  padding-left: 15px;
}
.sidebar-list li:hover {
  background: rgba(114, 111, 111, 0.4);
  cursor: pointer;
}

